--- a/ui/scss/_variables.scss
+++ b/ui/scss/_variables.scss
@@ -14,7 +14,7 @@ $orange: #FF851B !default;
 $purple: #B10DC9 !default;
 $red: #F3003D;
 $silver: #DDDDDD !default;
-$teal: #39CCCC !default;
+$teal: #00D6D8;
 $yellow: #FFDC00 !default;
 
 $primary: $green;
