--- a/ui/scss/main.scss
+++ b/ui/scss/main.scss
@@ -104,12 +104,22 @@ $width: 800px;
       .header {
         border-radius: $radius $radius 0 0;
       }
+      .body {
+        display: block;
+      }
     }
     .header {
       background: $light;
       border-radius: $radius;
       padding: $space/3;
       position: relative;
+      &:hover {
+        background: tint($light, 7%);
+        cursor: pointer;
+        & + .body {
+          border-color: tint($light, 7%);
+        }
+      }
     }
     h2 {
       font-size: inherit;
@@ -123,6 +133,7 @@ $width: 800px;
       background: $black;
       border: 1px solid $line;
       border-top: 0;
+      display: none;
       .console {
         color: #FFF;
         font-family: $code;
