--- a/ui/scss/_variables.scss
+++ b/ui/scss/_variables.scss
@@ -12,7 +12,7 @@ $navy: #001f3f !default;
 $olive: #3D9970 !default;
 $orange: #FF851B !default;
 $purple: #B10DC9 !default;
-$red: #F3003D;
+$red: #FF6059;
 $silver: #DDDDDD !default;
 $teal: #00D6D8;
 $yellow: #FFDC00 !default;
